Nav Bar and Background Image Added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="assets/YouDrive-DarkBlue.png" width=100% height="30" alt="YouDrive">
+          <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
         </a>
-      </nav>
+    </nav>
+    
 
 
 
