Animation & Style Changes

--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    
+    <div class="doorcontainer">       
+        <div class="topdoor"></div>
+        <div class="bottomdoor"></div>
+    </div>
+
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
+        <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
         </a>
     </nav>
-    
-
+    <div class="mapcontainer">
+        <div class="usamap"><img src="./assets/usamap-orange.png"></div>    
+    </div>    
 
 
     <script src="app/main.js"></script>
