Map Image Positioned

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
         </a>
     </nav>
-    <div class="mapcontainer">
-        <div class="usamap"><img src="./assets/usamap-orange.png"></div>    
-    </div>    
+
+     <div class="container">
+        <div class="row">
+            <div class="col usamap"><img src="./assets/usamap-youdrive-darkblue.png" width="60%"></div>
+        </div>    
+    </div>   
 
 
     <script src="app/main.js"></script>
