Splash Page almost done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
      <div class="container">
         <div class="row">
-            <div class="col usamap"><img src="./assets/usamap-youdrive-darkblue.png" width="60%"></div>
+            <div class="col-10 p-0 m-0 usamap"><img src="./assets/usamap-youdrive-blue.png" width="65%"></div>
         </div>    
     </div>   
 
