Adjustments and Added Welcome Card

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>YouDrive: USA Resources and Tools</title>
+    <title>You Drive: USA Resources and Tools</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -24,7 +26,15 @@
 
      <div class="container">
         <div class="row">
-            <div class="col-10 p-0 m-0 usamap"><img src="./assets/usamap-youdrive-blue.png" width="65%"></div>
+            <div class="col-10 p-0 m-0 usamap"><img src="./assets/usamap-youdrive-blue.png" width="65%">
+            </div>
+            <div class="card border-dark mb-4 welcome-box">
+                <div class="card-body">
+                  <h4 class="card-title">Welcome to You Drive!</h4>
+                  <p class="card-text">You Drive is your online research tool to public records across the United States. Available links to Land Records, Assessments, and Tax Information are just a click away. </p>
+                  <a href="./welcome.html" class="btn btn-info btn-lg btn-block">Get Started!</a>
+                </div>
+            </div>
         </div>    
     </div>   
 
