Welcome page stuff

--- a/welcome.html
+++ b/welcome.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>You Drive: USA Resources and Tools</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/welcome.css">
 </head>
+
 <body>
-    <h1>Test Welcome page</h1>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
+        </a>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
+            <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Password">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+        </form>
+    </nav>
+
 
 
 
@@ -22,4 +35,5 @@
 
     <script src="app/main.js"></script>
 </body>
+
 </html>
