Login form on index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
                     <h4 class="card-title">Welcome to You Drive!</h4>
                     <p class="card-text">You Drive is your online research tool to public records across the United
                         States. Available links to Land Records, Assessments, and Tax Information are just a click away.
+                        <br>
+                        <br>
+                        Please login using your email address and password below. If you do not have not been assigned
+                        an account, please contact your system administrator.
                     </p>
+                    <form class="form-inline">
+                        <input class="form-control col-6 mb-1" type="text" placeholder="Email Address"
+                            aria-label="Email">
+                        <input class="form-control col-6 mb-1" type="text" placeholder="Password" aria-label="Password">
+                        <button class="btn btn-info my-2 my-sm-0 btn-lg btn-block" type="submit">Login</button>
+                    </form>
                     <a href="./welcome.html" class="btn btn-info btn-lg btn-block">Get Started!</a>
                 </div>
             </div>
