--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
                         Please login using your email address and password below. If you do not have not been assigned
                         an account, please contact your system administrator.
                     </p>
-                    <form class="form-inline">
-                        <input class="form-control col-6 mb-1" type="text" placeholder="Email Address"
-                            aria-label="Email">
-                        <input class="form-control col-6 mb-1" type="text" placeholder="Password" aria-label="Password">
+                    <form>
+                        <div class="form-row">
+                            <div class="col">
+                                <input type="text" class="form-control mb-1" type="text" placeholder="Email Address">
+                            </div>
+                            <div class="col">
+                                <input type="text" class="form-control mb-1" type="text" placeholder="Password">
+                            </div>
+                        </div>
                         <button class="btn btn-info my-2 my-sm-0 btn-lg btn-block" type="submit">Login</button>
                     </form>
-                    <a href="./welcome.html" class="btn btn-info btn-lg btn-block">Get Started!</a>
+                    <a href="./welcome.html" class="btn btn-info btn-lg btn-block mt-1">Get Started!</a>
                 </div>
             </div>
         </div>
