started file structure

--- a/unitedstates.html
+++ b/unitedstates.html
@@ -8,29 +8,24 @@
     <title>You Drive: USA Resources and Tools</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/welcome.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/unitedstates.css">
 </head>
 
 <body>
+
+
+    <div class="doorcontainer">
+        <div class="topdoor"></div>
+        <div class="bottomdoor"></div>
+    </div>
+
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="#">
             <img src="assets/YouDrive-DarkBlue.png" height="30" alt="YouDrive">
         </a>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
-            <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-        </form>
     </nav>
-
-
-
-
-
-
-
-
-
 
 
     <script src="app/main.js"></script>
