--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                         <button class="btn btn-info my-2 my-sm-0 btn-lg btn-block" type="submit">Login</button>
                     </form>
-                    <a href="./welcome.html" class="btn btn-info btn-lg btn-block mt-1">Get Started!</a>
+                    <!-- <a href="./welcome.html" class="btn btn-info btn-lg btn-block mt-1">Get Started!</a> -->
                 </div>
             </div>
         </div>
